LinKreta_POC_Repository/force-app/main/default/objects/GM_ACTIVITY__x/GM_ACTIVITY__x.object-meta.xml
<CustomObject>
    <description>GM_ACTIVITY</description>
    <externalDataSource>WCGT_Integration</externalDataSource>
    <externalName>GM_ACTIVITY</externalName>
    <label>GM_ACTIVITY</label>
    <pluralLabel>GM_ACTIVITY</pluralLabel>
</CustomObject>