LinKreta_POC_Repository/force-app/main/default/objects/GM_ACTIVITY__x/fields/ACC_NSL_BUL_SL__c.field-meta.xml
<CustomField>
    <fullName>ACC_NSL_BUL_SL__c</fullName>
    <description>ACC_NSL_BUL_SL</description>
    <externalDeveloperName>ACC_NSL_BUL_SL</externalDeveloperName>
    <label>ACC_NSL_BUL_SL</label>
    <length>100</length>
    <type>Text</type>
</CustomField>