LinKreta_POC_Repository/force-app/main/default/objects/GM_ACTIVITY__x/fields/ACTIVITY_DATE__c.field-meta.xml
<CustomField>
    <fullName>ACTIVITY_DATE__c</fullName>
    <description>ACTIVITY_DATE</description>
    <externalDeveloperName>ACTIVITY_DATE</externalDeveloperName>
    <label>ACTIVITY_DATE</label>
    <type>DateTime</type>
</CustomField>