LinKreta_POC_Repository/force-app/main/default/objects/GM_ACTIVITY__x/fields/ACTIVITY_ID__c.field-meta.xml
<CustomField>
    <fullName>ACTIVITY_ID__c</fullName>
    <description>ACTIVITY_ID</description>
    <externalDeveloperName>ACTIVITY_ID</externalDeveloperName>
    <label>ACTIVITY_ID</label>
    <length>8</length>
    <type>Text</type>
</CustomField>