LinKreta_POC_Repository/force-app/main/default/objects/GM_ACTIVITY__x/fields/ACTIVITY_OLD__c.field-meta.xml
<CustomField>
    <fullName>ACTIVITY_OLD__c</fullName>
    <description>ACTIVITY_OLD</description>
    <externalDeveloperName>ACTIVITY_OLD</externalDeveloperName>
    <label>ACTIVITY_OLD</label>
    <length>1</length>
    <type>Text</type>
</CustomField>