LinKreta_POC_Repository/force-app/main/default/objects/GM_ACTIVITY__x/fields/ACTIVITY_STATUS__c.field-meta.xml
<CustomField>
    <fullName>ACTIVITY_STATUS__c</fullName>
    <description>ACTIVITY_STATUS</description>
    <externalDeveloperName>ACTIVITY_STATUS</externalDeveloperName>
    <label>ACTIVITY_STATUS</label>
    <length>8</length>
    <type>Text</type>
</CustomField>