LinKreta_POC_Repository/force-app/main/default/objects/GM_ACTIVITY__x/fields/ACTIVITY_TYPE__c.field-meta.xml
<CustomField>
    <fullName>ACTIVITY_TYPE__c</fullName>
    <description>ACTIVITY_TYPE</description>
    <externalDeveloperName>ACTIVITY_TYPE</externalDeveloperName>
    <label>ACTIVITY_TYPE</label>
    <length>8</length>
    <type>Text</type>
</CustomField>