LinKreta_POC_Repository/force-app/main/default/objects/GM_ACTIVITY__x/fields/AGENDA__c.field-meta.xml
<CustomField>
    <fullName>AGENDA__c</fullName>
    <description>AGENDA</description>
    <externalDeveloperName>AGENDA</externalDeveloperName>
    <label>AGENDA</label>
    <length>3500</length>
    <type>LongTextArea</type>
</CustomField>