LinKreta_POC_Repository/force-app/main/default/objects/GM_ACTIVITY__x/fields/BDO_ACTIVITY_IDS__c.field-meta.xml
<CustomField>
    <fullName>BDO_ACTIVITY_IDS__c</fullName>
    <description>BDO_ACTIVITY_IDS</description>
    <externalDeveloperName>BDO_ACTIVITY_IDS</externalDeveloperName>
    <label>BDO_ACTIVITY_IDS</label>
    <length>20</length>
    <type>Text</type>
</CustomField>