LinKreta_POC_Repository/force-app/main/default/objects/GM_ACTIVITY__x/fields/CATEGRY__c.field-meta.xml
<CustomField>
    <fullName>CATEGRY__c</fullName>
    <description>CATEGRY</description>
    <externalDeveloperName>CATEGRY</externalDeveloperName>
    <label>CATEGRY</label>
    <length>8</length>
    <type>Text</type>
</CustomField>