LinKreta_POC_Repository/force-app/main/default/objects/GM_ACTIVITY__x/fields/COMP_NAME__c.field-meta.xml
<CustomField>
    <fullName>COMP_NAME__c</fullName>
    <description>COMP_NAME</description>
    <externalDeveloperName>COMP_NAME</externalDeveloperName>
    <label>COMP_NAME</label>
    <length>200</length>
    <type>Text</type>
</CustomField>