LinKreta_POC_Repository/force-app/main/default/objects/GM_ACTIVITY__x/fields/COMPLETE_DATE__c.field-meta.xml
<CustomField>
    <fullName>COMPLETE_DATE__c</fullName>
    <description>COMPLETE_DATE</description>
    <externalDeveloperName>COMPLETE_DATE</externalDeveloperName>
    <label>COMPLETE_DATE</label>
    <type>DateTime</type>
</CustomField>