LinKreta_POC_Repository/force-app/main/default/objects/GM_ACTIVITY__x/fields/COMPLETE_TIME__c.field-meta.xml
<CustomField>
    <fullName>COMPLETE_TIME__c</fullName>
    <description>COMPLETE_TIME</description>
    <externalDeveloperName>COMPLETE_TIME</externalDeveloperName>
    <label>COMPLETE_TIME</label>
    <length>15</length>
    <type>Text</type>
</CustomField>