LinKreta_POC_Repository/force-app/main/default/objects/GM_ACTIVITY__x/fields/CONT_PRSN_ID__c.field-meta.xml
<CustomField>
    <fullName>CONT_PRSN_ID__c</fullName>
    <description>CONT_PRSN_ID</description>
    <externalDeveloperName>CONT_PRSN_ID</externalDeveloperName>
    <label>CONT_PRSN_ID</label>
    <length>65</length>
    <type>Text</type>
</CustomField>