LinKreta_POC_Repository/force-app/main/default/objects/GM_ACTIVITY__x/fields/CONTACT_ID__c.field-meta.xml
<CustomField>
    <fullName>CONTACT_ID__c</fullName>
    <description>CONTACT_ID</description>
    <externalDeveloperName>CONTACT_ID</externalDeveloperName>
    <label>CONTACT_ID</label>
    <length>8</length>
    <type>Text</type>
</CustomField>