LinKreta_POC_Repository/force-app/main/default/objects/GM_ACTIVITY__x/fields/CONTACT_PRSN_NAME__c.field-meta.xml
<CustomField>
    <fullName>CONTACT_PRSN_NAME__c</fullName>
    <description>CONTACT_PRSN_NAME</description>
    <externalDeveloperName>CONTACT_PRSN_NAME</externalDeveloperName>
    <label>CONTACT_PRSN_NAME</label>
    <length>200</length>
    <type>Text</type>
</CustomField>