LinKreta_POC_Repository/force-app/main/default/objects/GM_ACTIVITY__x/fields/CONTACT_TYPE__c.field-meta.xml
<CustomField>
    <fullName>CONTACT_TYPE__c</fullName>
    <description>CONTACT_TYPE</description>
    <externalDeveloperName>CONTACT_TYPE</externalDeveloperName>
    <label>CONTACT_TYPE</label>
    <length>20</length>
    <type>Text</type>
</CustomField>