LinKreta_POC_Repository/force-app/main/default/objects/GM_ACTIVITY__x/fields/DATE_CR__c.field-meta.xml
<CustomField>
    <fullName>DATE_CR__c</fullName>
    <description>DATE_CR</description>
    <externalDeveloperName>DATE_CR</externalDeveloperName>
    <label>DATE_CR</label>
    <length>20</length>
    <type>Text</type>
</CustomField>