LinKreta_POC_Repository/force-app/main/default/objects/GM_ACTIVITY__x/fields/DATE_UP__c.field-meta.xml
<CustomField>
    <fullName>DATE_UP__c</fullName>
    <description>DATE_UP</description>
    <externalDeveloperName>DATE_UP</externalDeveloperName>
    <label>DATE_UP</label>
    <length>20</length>
    <type>Text</type>
</CustomField>