LinKreta_POC_Repository/force-app/main/default/objects/GM_ACTIVITY__x/fields/DAYS__c.field-meta.xml
<CustomField>
    <fullName>DAYS__c</fullName>
    <description>DAYS</description>
    <externalDeveloperName>DAYS</externalDeveloperName>
    <label>DAYS</label>
    <length>15</length>
    <type>Text</type>
</CustomField>