LinKreta_POC_Repository/force-app/main/default/objects/GM_ACTIVITY__x/fields/DEAL_CODE__c.field-meta.xml
<CustomField>
    <fullName>DEAL_CODE__c</fullName>
    <description>DEAL_CODE</description>
    <externalDeveloperName>DEAL_CODE</externalDeveloperName>
    <label>DEAL_CODE</label>
    <length>8</length>
    <type>Text</type>
</CustomField>