LinKreta_POC_Repository/force-app/main/default/objects/GM_ACTIVITY__x/fields/DURATION__c.field-meta.xml
<CustomField>
    <fullName>DURATION__c</fullName>
    <description>DURATION</description>
    <externalDeveloperName>DURATION</externalDeveloperName>
    <label>DURATION</label>
    <length>15</length>
    <type>Text</type>
</CustomField>