LinKreta_POC_Repository/force-app/main/default/objects/GM_ACTIVITY__x/fields/END_TIME__c.field-meta.xml
<CustomField>
    <fullName>END_TIME__c</fullName>
    <description>END_TIME</description>
    <externalDeveloperName>END_TIME</externalDeveloperName>
    <label>END_TIME</label>
    <type>DateTime</type>
</CustomField>