LinKreta_POC_Repository/force-app/main/default/objects/GM_ACTIVITY__x/fields/HR_MIN_DUR__c.field-meta.xml
<CustomField>
    <fullName>HR_MIN_DUR__c</fullName>
    <description>HR_MIN_DUR</description>
    <externalDeveloperName>HR_MIN_DUR</externalDeveloperName>
    <label>HR_MIN_DUR</label>
    <length>8</length>
    <type>Text</type>
</CustomField>