LinKreta_POC_Repository/force-app/main/default/objects/GM_ACTIVITY__x/fields/IS_CANCEL__c.field-meta.xml
<CustomField>
    <fullName>IS_CANCEL__c</fullName>
    <description>IS_CANCEL</description>
    <externalDeveloperName>IS_CANCEL</externalDeveloperName>
    <label>IS_CANCEL</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>