LinKreta_POC_Repository/force-app/main/default/objects/GM_ACTIVITY__x/fields/JOB_CODE__c.field-meta.xml
<CustomField>
    <fullName>JOB_CODE__c</fullName>
    <description>JOB_CODE</description>
    <externalDeveloperName>JOB_CODE</externalDeveloperName>
    <label>JOB_CODE</label>
    <length>8</length>
    <type>Text</type>
</CustomField>