LinKreta_POC_Repository/force-app/main/default/objects/GM_ACTIVITY__x/fields/LEADER__c.field-meta.xml
<CustomField>
    <fullName>LEADER__c</fullName>
    <description>LEADER</description>
    <externalDeveloperName>LEADER</externalDeveloperName>
    <label>LEADER</label>
    <length>8</length>
    <type>Text</type>
</CustomField>