LinKreta_POC_Repository/force-app/main/default/objects/GM_ACTIVITY__x/fields/MEETINGID__c.field-meta.xml
<CustomField>
    <fullName>MEETINGID__c</fullName>
    <description>MEETINGID</description>
    <externalDeveloperName>MEETINGID</externalDeveloperName>
    <label>MEETINGID</label>
    <length>200</length>
    <type>Text</type>
</CustomField>