LinKreta_POC_Repository/force-app/main/default/objects/GM_ACTIVITY__x/fields/MEMBER_ID__c.field-meta.xml
<CustomField>
    <fullName>MEMBER_ID__c</fullName>
    <description>MEMBER_ID</description>
    <externalDeveloperName>MEMBER_ID</externalDeveloperName>
    <label>MEMBER_ID</label>
    <length>65</length>
    <type>Text</type>
</CustomField>