LinKreta_POC_Repository/force-app/main/default/objects/GM_ACTIVITY__x/fields/MEMBER_ID_NEW__c.field-meta.xml
<CustomField>
    <fullName>MEMBER_ID_NEW__c</fullName>
    <description>MEMBER_ID_NEW</description>
    <externalDeveloperName>MEMBER_ID_NEW</externalDeveloperName>
    <label>MEMBER_ID_NEW</label>
    <length>65</length>
    <type>Text</type>
</CustomField>