LinKreta_POC_Repository/force-app/main/default/objects/GM_ACTIVITY__x/fields/MEMBER_NAME__c.field-meta.xml
<CustomField>
    <fullName>MEMBER_NAME__c</fullName>
    <description>MEMBER_NAME</description>
    <externalDeveloperName>MEMBER_NAME</externalDeveloperName>
    <label>MEMBER_NAME</label>
    <length>200</length>
    <type>Text</type>
</CustomField>