LinKreta_POC_Repository/force-app/main/default/objects/GM_ACTIVITY__x/fields/MEMBER_NAME_NEW__c.field-meta.xml
<CustomField>
    <fullName>MEMBER_NAME_NEW__c</fullName>
    <description>MEMBER_NAME_NEW</description>
    <externalDeveloperName>MEMBER_NAME_NEW</externalDeveloperName>
    <label>MEMBER_NAME_NEW</label>
    <length>200</length>
    <type>Text</type>
</CustomField>