LinKreta_POC_Repository/force-app/main/default/objects/GM_ACTIVITY__x/fields/MEMBER_SEPARATE__c.field-meta.xml
<CustomField>
    <fullName>MEMBER_SEPARATE__c</fullName>
    <description>MEMBER_SEPARATE</description>
    <externalDeveloperName>MEMBER_SEPARATE</externalDeveloperName>
    <label>MEMBER_SEPARATE</label>
    <length>200</length>
    <type>Text</type>
</CustomField>