LinKreta_POC_Repository/force-app/main/default/objects/GM_ACTIVITY__x/fields/NOTES__c.field-meta.xml
<CustomField>
    <fullName>NOTES__c</fullName>
    <description>NOTES</description>
    <externalDeveloperName>NOTES</externalDeveloperName>
    <label>NOTES</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>