LinKreta_POC_Repository/force-app/main/default/objects/GM_ACTIVITY__x/fields/PRIORITY__c.field-meta.xml
<CustomField>
    <fullName>PRIORITY__c</fullName>
    <description>PRIORITY</description>
    <externalDeveloperName>PRIORITY</externalDeveloperName>
    <label>PRIORITY</label>
    <length>8</length>
    <type>Text</type>
</CustomField>