LinKreta_POC_Repository/force-app/main/default/objects/GM_ACTIVITY__x/fields/RECUR_TYP__c.field-meta.xml
<CustomField>
    <fullName>RECUR_TYP__c</fullName>
    <description>RECUR_TYP</description>
    <externalDeveloperName>RECUR_TYP</externalDeveloperName>
    <label>RECUR_TYP</label>
    <length>1</length>
    <type>Text</type>
</CustomField>