LinKreta_POC_Repository/force-app/main/default/objects/GM_ACTIVITY__x/fields/RECURR_DATE__c.field-meta.xml
<CustomField>
    <fullName>RECURR_DATE__c</fullName>
    <description>RECURR_DATE</description>
    <externalDeveloperName>RECURR_DATE</externalDeveloperName>
    <label>RECURR_DATE</label>
    <type>DateTime</type>
</CustomField>