LinKreta_POC_Repository/force-app/main/default/objects/GM_ACTIVITY__x/fields/REGARDING__c.field-meta.xml
<CustomField>
    <fullName>REGARDING__c</fullName>
    <description>REGARDING</description>
    <externalDeveloperName>REGARDING</externalDeveloperName>
    <label>REGARDING</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>