LinKreta_POC_Repository/force-app/main/default/objects/GM_ACTIVITY__x/fields/REMINDER__c.field-meta.xml
<CustomField>
    <fullName>REMINDER__c</fullName>
    <description>REMINDER</description>
    <externalDeveloperName>REMINDER</externalDeveloperName>
    <label>REMINDER</label>
    <length>10</length>
    <type>Text</type>
</CustomField>