LinKreta_POC_Repository/force-app/main/default/objects/GM_ACTIVITY__x/fields/RESOURCES__c.field-meta.xml
<CustomField>
    <fullName>RESOURCES__c</fullName>
    <description>RESOURCES</description>
    <externalDeveloperName>RESOURCES</externalDeveloperName>
    <label>RESOURCES</label>
    <length>65</length>
    <type>Text</type>
</CustomField>