LinKreta_POC_Repository/force-app/main/default/objects/GM_ACTIVITY__x/fields/RESPONSIBILITY__c.field-meta.xml
<CustomField>
    <fullName>RESPONSIBILITY__c</fullName>
    <description>RESPONSIBILITY</description>
    <externalDeveloperName>RESPONSIBILITY</externalDeveloperName>
    <label>RESPONSIBILITY</label>
    <length>40</length>
    <type>Text</type>
</CustomField>