LinKreta_POC_Repository/force-app/main/default/objects/GM_ACTIVITY__x/fields/SCHEDULE_DATE__c.field-meta.xml
<CustomField>
    <fullName>SCHEDULE_DATE__c</fullName>
    <description>SCHEDULE_DATE</description>
    <externalDeveloperName>SCHEDULE_DATE</externalDeveloperName>
    <label>SCHEDULE_DATE</label>
    <type>DateTime</type>
</CustomField>