LinKreta_POC_Repository/force-app/main/default/objects/GM_ACTIVITY__x/fields/SCHEDULE_TIME__c.field-meta.xml
<CustomField>
    <fullName>SCHEDULE_TIME__c</fullName>
    <description>SCHEDULE_TIME</description>
    <externalDeveloperName>SCHEDULE_TIME</externalDeveloperName>
    <label>SCHEDULE_TIME</label>
    <length>15</length>
    <type>Text</type>
</CustomField>