LinKreta_POC_Repository/force-app/main/default/objects/GM_ACTIVITY__x/fields/START_TIME__c.field-meta.xml
<CustomField>
    <fullName>START_TIME__c</fullName>
    <description>START_TIME</description>
    <externalDeveloperName>START_TIME</externalDeveloperName>
    <label>START_TIME</label>
    <length>15</length>
    <type>Text</type>
</CustomField>