LinKreta_POC_Repository/force-app/main/default/objects/GM_ACTIVITY__x/fields/STRT_TIME__c.field-meta.xml
<CustomField>
    <fullName>STRT_TIME__c</fullName>
    <description>STRT_TIME</description>
    <externalDeveloperName>STRT_TIME</externalDeveloperName>
    <label>STRT_TIME</label>
    <length>15</length>
    <type>Text</type>
</CustomField>