LinKreta_POC_Repository/force-app/main/default/objects/GM_ACTIVITY__x/fields/USER_CR__c.field-meta.xml
<CustomField>
    <fullName>USER_CR__c</fullName>
    <description>USER_CR</description>
    <externalDeveloperName>USER_CR</externalDeveloperName>
    <label>USER_CR</label>
    <length>8</length>
    <type>Text</type>
</CustomField>